--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.5.2",
     "react-flatpickr": "^3.6.4",
     "react-moment": "^0.7.9",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
